2004-03-31  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "af" to ALL_LINGUAS.

2004-03-23  Guntupalli Karunakar  <karunakar@freedomink.org>

        * configure.in: Added "mr" for Marathi in ALL_LINGUAS.

2004-03-18  Gareth Owen  <gowen72@yahoo.com>

	* configure.in: Added en_GB to ALL_LINGUAS

2004-03-18  Guntupalli Karunakar  <karunakar@freedomink.org>

	* configure.in: Added "mr" for Marathi in ALL_LINGUAS.

Mon Mar 15 10:22:30 2004  George Lebl <jirka@5z.com>

	* Release 2.6.0.0

	* docs/Makefile.am: fix build

	* Makefile.am: did I not commit this build fix?

2004-03-15  Glynn Foster  <glynn.foster@sun.com>

	* configure.in, docs/Makefile.am: Add localized docs to build.
	* docs/*: Add de, es, fr, it, ja, ko, sv, zh_CN, zh_HK and zh_TW
	all from the Sun translation team.

Tue Mar 09 20:51:58 2004  George Lebl <jirka@5z.com>

	* config/gdm.conf.in, daemon/gdm.h: make DisplayLastLogin default
	  to 'false' since 'last' is stupid and non-localized, must make
	  our own version.  So this doesn't break 'code' freeze since it
	  doesn't change any code does it?

Thu Mar 04 11:08:42 2004  George Lebl <jirka@5z.com>

	* Release 2.5.90.2

	* Makefile.am: remove the sun gdmsetup-security fix as it was wrong
	  (probably was part of some other change)

Thu Mar 04 10:48:04 2004  George Lebl <jirka@5z.com>

	* daemon/slave.c: Handle out of diskspace on making user
	  authentication better by first trying to wipe old xsession-errors
	  files for this user as that could in fact be the culprit and
	  usually frees up enough to write ~/.Xauthority.  We should try more
	  things, this is a crucial point which could render the machine
	  unusable on a simple out of diskspace error.

Thu Mar 04 10:18:40 2004  George Lebl <jirka@5z.com>

	* configure.in, daemon/slave.c: Apply patch from
	  vincent.berger@ext.bull.net (Vincent Berger), to make
	  /etc/environment work on AIX using setpenv.  Fixes #135401

	* daemon/slave.c: cosmetic cleanup
